# Omnimagnet

./: .gitignore
Code/Basic Operation/: CMakeLists.txt  main.cpp
Code/Tractor Beam/: CMakeLists.txt  README.md  cameracapture.cpp  cameracapture.hpp  cameratrack.cpp  cameratrack.hpp  main.cpp
Code/Tractor Beam/output/: Experiment List.xlsx  ~$Experiment List.xlsx
Code/Tractor Beam/output/experiment_A1/: experiment_A1_experiment_summary.txt  experiment_A1_image_log.csv  experiment_A1_setup_info.txt
Code/Tractor Beam/output/experiment_A2/: experiment_A2_experiment_summary.txt  experiment_A2_image_log.csv  experiment_A2_setup_info.txt
Code/Tractor Beam/output/experiment_A3/: experiment_A3_experiment_summary.txt  experiment_A3_image_log.csv  experiment_A3_setup_info.txt
Code/Tractor Beam/output/experiment_B1/: experiment_B1_experiment_summary.txt  experiment_B1_image_log.csv  experiment_B1_setup_info.txt
Code/Tractor Beam/output/experiment_B2/: experiment_B2_experiment_summary.txt  experiment_B2_image_log.csv  experiment_B2_setup_info.txt
Code/Tractor Beam/output/experiment_B3/: experiment_B3_experiment_summary.txt  experiment_B3_image_log.csv  experiment_B3_setup_info.txt
Code/Tractor Beam/output/experiment_C1/: experiment_C1_experiment_summary.txt  experiment_C1_image_log.csv  experiment_C1_setup_info.txt
Code/Tractor Beam/output/experiment_C2/: experiment_C2_experiment_summary.txt  experiment_C2_image_log.csv  experiment_C2_setup_info.txt
Code/Tractor Beam/output/experiment_C3/: experiment_C3_experiment_summary.txt  experiment_C3_image_log.csv  experiment_C3_setup_info.txt
Code/Tractor Beam/output/experiment_D1/: experiment_D1_experiment_summary.txt  experiment_D1_image_log.csv  experiment_D1_setup_info.txt
Code/Tractor Beam/output/experiment_D2/: experiment_D2_experiment_summary.txt  experiment_D2_image_log.csv  experiment_D2_setup_info.txt
Code/Tractor Beam/output/experiment_D3/: experiment_D3_experiment_summary.txt  experiment_D3_image_log.csv  experiment_D3_setup_info.txt
Code/Tractor Beam/output/experiment_E1/: experiment_E1_experiment_summary.txt  experiment_E1_image_log.csv  experiment_E1_setup_info.txt
Code/Tractor Beam/output/experiment_E2/: experiment_E2_experiment_summary.txt  experiment_E2_image_log.csv  experiment_E2_setup_info.txt
Code/Tractor Beam/output/experiment_E3/: experiment_E3_experiment_summary.txt  experiment_E3_image_log.csv  experiment_E3_setup_info.txt
Code/Tractor Beam/output/experiment_F1/: experiment_F1_experiment_summary.txt  experiment_F1_image_log.csv  experiment_F1_setup_info.txt
Code/Tractor Beam/output/experiment_F2/: experiment_F2_experiment_summary.txt  experiment_F2_image_log.csv  experiment_F2_setup_info.txt
Code/Tractor Beam/output/experiment_F3/: experiment_F3_experiment_summary.txt  experiment_F3_image_log.csv  experiment_F3_setup_info.txt
Code/Tractor Beam/output/experiment_G1/: experiment_G1_experiment_summary.txt  experiment_G1_image_log.csv  (+1 more)
Code/Tractor Beam/scripts/: README.md  crop_images.py  fisheye_calibrate.py  fisheye_calibration.npz  generate_experiment_timelapse.py  undistort_images.py
(+166 files in other folders)
